--- a/src/styles/searchComponent.css
+++ b/src/styles/searchComponent.css
@@ -2,26 +2,30 @@
 .search-bar-container {
   position: relative;
   width: 300px;
-  margin: 0 auto;
+  margin: -15px;
+  
+  
 }
 .search-element{
-  height: 100px;
+  height: 30px !important;
+  align-items: center;
 }
 .search-bar-input
 {
-  height: 100px !important;
+  height: 30px !important;
 }
 
 
 /* Input box styles */
 .search-bar-container input {
   width: 100%;
-  padding: 10px; 
+  padding: 0 10px;
   box-sizing: border-box;
   border-radius: 4px;
   border: 1px solid #ccc;
   font-size: 14px;
-  height: 100px !important;
+  height: 30px !important;
+  border-radius: 8px;
 }
 
 
